Fix source tab dropdown layout issues
* double scrollbar
* item font-size
* text overflow

--- a/public/js/components/App.css
+++ b/public/js/components/App.css
@@ -37,6 +37,7 @@ body {
   position: relative;
   flex: 1;
   background-color: var(--theme-tab-toolbar-background);
+  overflow: hidden;
 }
 
 .editor-container {
