--- a/public/js/components/SourceTabs.css
+++ b/public/js/components/SourceTabs.css
@@ -26,6 +26,7 @@
   border-bottom: none;
   position: relative;
   transition: all 0.25s ease;
+  max-width: calc(100% - 68px);
 }
 
 html:not([dir="rtl"]) .source-tab {
@@ -62,6 +63,11 @@ html[dir="rtl"] .source-tab {
   top: 3px;
 }
 
+.source-tab .filename {
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
 html:not([dir="rtl"]) .source-tab .close-btn {
   right: 4px;
 }
@@ -80,6 +86,8 @@ html[dir="rtl"] .source-tab .close-btn {
 
 .source-header .subsettings {
   position: absolute;
-  right: 3px;
+  right: 12px;
   top: 9px;
+  width: 12px;
+  height: 12px;
 }
